kubernetes/apps/kube-system/cilium/app/hubble-httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    glance/internal: "true"
    glance/icon: di:cilium
    glance/description: Cluster Network UI
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "hubble.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
